--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
-/*  your css code here. If applicable */
+.tst{
+	background-color:#f5f5f5;
+	padding:10px 20px;
+}
+.box{
+	background-color:white;
+}
